chore: finalize .gitignore cleanup for JDK exclusion

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Gradle build outputs
+**/build/
+
+# Android Studio project files
+.idea/
+
+# Prevent committing any embedded JDK copies if present
+app/src/main/java/com/example/tripbuddy/oracleJdk-*/
