--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ navigationUi = "2.6.0"
 recyclerview = "1.3.2"
 splashscreen = "1.0.1"
 glide = "4.16.0"
+materialCalendarView = "2.0.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -28,6 +29,7 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+materialcalendarview = { group = "com.prolificinteractive", name = "material-calendarview", version.ref = "materialCalendarView" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
